# SlopedTerrainLinearPolicy

./: .command.swp  CheckWorkspace.py  README.md  arbitary_slope_test.py  checkStoch3.py  command.txt  command_HyQ.txt  command_Laikago.txt  create_initial_policy.py  setup.py  tempCodeRunnerFile.py  testHyQ_policy.py  testHyq_policy.py  testLaikago_policy.py  testStoch2_policy.py  testStoch3_policy.py  test_policy.py  trainHyQ_policy.py  trainLaikago_policy.py  trainStoch2_policy.py  train_command_HyQ.txt  train_command_Laikago.txt  train_command_Stoch2.txt  train_policy.py
experiments/15Sept2/: hyperparameters
experiments/17Oct1/: hyperparameters
experiments/18Oct1/: hyperparameters
experiments/19Oct1/: hyperparameters
experiments/20Oct1/: hyperparameters
experiments/20Oct2/: hyperparameters
experiments/21Oct1/: hyperparameters
experiments/21Oct2/: hyperparameters
experiments/21Oct4/: hyperparameters
experiments/23July1/: hyperparameters
gym_stoch2_sloped_terrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gym_stoch2_sloped_terrain/envs/robots/stoch_two_abduction_urdf/: package.xml
gym_stoch2_sloped_terrain/envs/robots/stoch_two_abduction_urdf/meshes/: back_right_abd_link.STL  bl_upper_hip_link.STL  br_upper_knee_link.STL  fl_lower_hip_link.STL  fl_lower_knee_link.STL  fr_lower_hip_link.STL
initial_policies/: init_policy_TS.npy  init_policy_TS_wi.npy  initial_policy.npy  initial_policy_HyQ.npy  initial_policy_Laikago.npy  initial_policy_Laikago2.npy
media/: stalk_data.csv
utils/: ik_class.py  logger.py  make_train_plots.py
(+988 files in other folders)
